--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,25 @@
 ####################################################
 # THIS IS THE NGINX CONFIG FOR ONE OF MY WEBSITES  #
 #   IT GETS AN [A+] RATING ON THE SSL LABS TEST    #
-#   ALSO, IT FORCES HSTS AND COVERS MOST CYPHERS   #
+#   ALSO, IT FORCES HSTS AND COVERS MOST CIPHERS   #
 # -------====== BY NULL-DEV (Shadow) ======------- #
 ####################################################
-#
-# NOTE: FQDN stands for "Full Qualified Domain Name" and must be replaced with your own domain name
-#
+#                                                  #
+# NOTE: FQDN stands for "Full Qualified Domain     #
+#        Name" and must be replaced with your own  # 
+#        domain                                    #
+#                                                  #
+# ALSO: All uppercase comments are additional      #
+#       infos by me.                               #
+#                                                  #
+####################################################
+
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
         server_name FQDN.com;
+        
+        # THIS WILL REDIRECT HTTP TO HTTPS
         return 301 https://FQDN.com$request_uri;
         location ~ /.well-known {
                allow all;
@@ -22,35 +31,48 @@ server {
         listen 443 ssl default_server;
         spdy_keepalive_timeout 300;
         spdy_headers_comp 9;
+        # DISALLOW USING THE SITE AS iFRAME (CLICKJACKING)
         add_header X-Frame-Options DENY;
         add_header X-Content-Type-Options nosniff;
+        
+        # USE HSTS [A+]
         add_header Strict-Transport-Security 'max-age=31536000; preload';
+        
+        # COMMENT THAT OUT IF YOU DO NOT WANT TO INCLUDE SUBDOMAINS
         includeSubDomains; preload';
         #listen [::]:80 default_server ipv6only=on;
 
         root /var/www/FQDN.com/public_html;
         index index.html index.htm index.php;
 
-        # Make site accessible from http://localhost/
         server_name FQDN.com;
         ssl on;
         #ssl_buffer_size 1400;
         #ssl_session_tickets off;
         ssl_certificate /etc/letsencrypt/live/FQDN.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/FQDN.com/privkey.pem;
-        # ANTI POODLE - shadow
+        
+        # ANTI POODLE
         ssl_protocols TLSv1.2;
+        
+        # OCSP STAPLING
         ssl_stapling on;
         ssl_stapling_verify on;
         resolver 8.8.4.4 8.8.8.8 valid=300s;
         resolver_timeout 10s;
+        
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 24h;
-        # THIS SHOULD COVER MOST - Shadow
+        
+        # THIS SHOULD COVER MOST BROWSER WITHOUT GETTING A BAD RATING
         ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
         ssl_prefer_server_ciphers on;
+        
+        # WE WANT TO GENERATE A 4096-BIT DHPARAM KEY IN THE DIRECTORY '/etc/nginx/ssl' WITH
+        # $ openssl dhparam -out dhparam.pem 4096
         ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
+        # 2048-BIT CERTIFICATE
         location /.well-known/acme-challenge {
                 root /var/www/letsencrypt;
         }
@@ -60,7 +82,7 @@ server {
                 return 403;
         }
         
-        # THIS IS FOR THE WOLTLAB BURNING BARD CMS SOFTWARE 
+        # THIS IS FOR THE WOLTLAB BURNING BOARD CMS SOFTWARE 
         location /wbb/ {
                 index index.php;
                 try_files $uri $uri/ /wbb/index.php?$uri&$args;
@@ -70,7 +92,7 @@ server {
                 expires   30d;
         }
 
-        # NOTE: THIS IS THE LOCATION FOR PHP MY ADMIN WHICH INCLUDES AN NGINX AUTH
+        # NOTE: THIS IS THE LOCATION FOR PHP MY ADMIN SITE WHICH INCLUDES AN NGINX AUTH
         location /PHPMYADMINLOCATION {
                 auth_basic "Admin Login";
                 auth_basic_user_file /etc/nginx/pma_pass;
@@ -82,7 +104,7 @@ server {
                 auth_basic_user_file /etc/nginx/pma2_pass;
         }
 
-        # THIS NEEDS TO BE AN OWN SERVER (FOR GOGS) - Shadow
+        # THIS NEEDS TO BE AN OWN SERVER (FOR GOGS)
         # EDIT: UNUSED, HAS ITS OWN SUBDOMAIN NOW
         #location /git {
         #       proxy_pass http://localhost:3000/;
@@ -103,8 +125,6 @@ server {
         }
 
         location / {
-                # First attempt to serve request as file, then
-                # as directory, then fall back to displaying a 404.
                 index index.php;
                 try_files $uri $uri/ /index.php?$uri&$args;
                 #rewrite ^(.*)$ https://$http_host$request_uri redirect;
