--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,11 @@
 #        Name" and must be replaced with your own  # 
 #        domain                                    #
 #                                                  #
+# This is the file in                              #
+#   > /etc/nginx/sites-available/domain.com        #
+# Symlinked to                                     #              
+#   > /etc/nginx/sites-enabled/domain.com          #
+#                                                  #
 # ALSO: All uppercase comments are additional      #
 #       infos by me.                               #
 #                                                  #
@@ -68,8 +73,13 @@ server {
         ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
         ssl_prefer_server_ciphers on;
         
-        # WE WANT TO GENERATE A 4096-BIT DHPARAM KEY IN THE DIRECTORY '/etc/nginx/ssl' WITH
+        # WE WANT TO GENERATE A 4096-BIT DHPARAM KEY IN THE DIRECTORY '/etc/nginx/ssl' WHICH YOU HAVE TO CREATE WITH 
+        # $ mkdir /etc/nginx/ssl
+        # BY USING THE COMMAND
         # $ openssl dhparam -out dhparam.pem 4096
+        
+        # ------====== WARNING ======------
+        # THIS IS GOING TO TAKE *VERY* LONG
         ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
         # 2048-BIT CERTIFICATE
