Added custom 404 page

--- a/nginx.conf
+++ b/nginx.conf
@@ -134,6 +134,13 @@ server {
                allow all;
         }
 
+        # THIS USES THE CUSTOM 404 PAGE LOCATED AT /var/www/error/404.html
+        error_page 404 /404.html;
+            location = /404.html {
+            root /var/www/error/;
+            internal;
+        }
+        
         location / {
                 index index.php;
                 try_files $uri $uri/ /index.php?$uri&$args;
