--- a/nginx.conf
+++ b/nginx.conf
@@ -37,8 +37,12 @@ server {
         spdy_keepalive_timeout 300;
         spdy_headers_comp 9;
         # DISALLOW USING THE SITE AS iFRAME (CLICKJACKING)
-        add_header X-Frame-Options DENY;
         add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Robots-Tag none;
+        add_header X-Download-Options noopen;
+        add_header X-Permitted-Cross-Domain-Policies none;
         
         # USE HSTS [A+]
         add_header Strict-Transport-Security 'max-age=31536000; preload';
