--- a/nginx.conf
+++ b/nginx.conf
@@ -102,6 +102,12 @@ server {
                 try_files $uri $uri/ /wbb/index.php?$uri&$args;
         }
 
+        location = /robots.txt {
+                allow all;
+                log_not_found off;
+                access_log off;
+        }
+        
         location ~* \.(gif|jpe?g|png|css)$ {
                 expires   30d;
         }
