Commented out "include subdomains"

--- a/nginx.conf
+++ b/nginx.conf
@@ -47,8 +47,8 @@ server {
         # USE HSTS [A+]
         add_header Strict-Transport-Security 'max-age=31536000; preload';
         
-        # COMMENT THAT OUT IF YOU DO NOT WANT TO INCLUDE SUBDOMAINS
-        includeSubDomains; preload';
+        # REMOVE THE COMMENT IF YOU DO NOT WANT TO INCLUDE SUBDOMAINS
+        #includeSubDomains; preload';
         #listen [::]:80 default_server ipv6only=on;
 
         root /var/www/FQDN.com/public_html;
@@ -141,21 +141,20 @@ server {
         
         # LETSENCRYPT
         location ~ /.well-known {
-               allow all;
+                allow all;
         }
 
         # THIS USES THE CUSTOM 404 PAGE LOCATED AT /var/www/error/404.html
         error_page 404 /404.html;
-            location = /404.html {
-            root /var/www/error/;
-            internal;
+                location = /404.html {
+                root /var/www/error/;
+                internal;
         }
         
         location / {
                 index index.php;
                 try_files $uri $uri/ /index.php?$uri&$args;
                 #rewrite ^(.*)$ https://$http_host$request_uri redirect;
-                # Uncomment to enable naxsi on this location
                 # include /etc/nginx/naxsi.rules
         }
 }
