--- a/nginx/no-ssl.nginx.conf
+++ b/nginx/no-ssl.nginx.conf
@@ -4,6 +4,7 @@ server {
 
     root /var/www/nulldev.org/public_html;
     index index.php index.html index.htm;
+    error_log /var/www/nulldev.org/log/err.log;
 
     server_name nulldev.org;
 
