--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+*.class
+*.log
+*.ctxt
+.mtj.tmp/
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+hs_err_pid*
 .metadata
 bin/
 tmp/
@@ -9,16 +20,9 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-.project
-.externalToolBuilders/
 *.launch
-*.pydevproject
-.cproject
-.classpath
-.factorypath
 .buildpath
 .target
-.tern-project
-.texlipse
-.springBeans
 .recommenders/
+.classpath
+.project
