--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 		"type": "git",
 		"url": "https://github.com/NLDev/dotfiles"
 	},
-	"maintainers": [{
-		"name": "NullDev",
-		"email": "admin@nulldev.org",
-		"web": "nulldev.org"
-	}],
+	"maintainers": [
+		{
+			"name": "NullDev",
+			"email": "admin@nulldev.org",
+			"web": "nulldev.org"
+		}
+	],
 	"license": "Apache-2.0",
 	"author": "NullDev",
 	"homepage": "https://nulldev.org"
