Fixed info sentence

--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,7 @@ server {
         # USE HSTS [A+]
         add_header Strict-Transport-Security 'max-age=31536000; preload';
         
-        # REMOVE THE COMMENT IF YOU DO NOT WANT TO INCLUDE SUBDOMAINS
+        # REMOVE THE COMMENT (#) IF YOU WANT TO INCLUDE SUBDOMAINS
         #includeSubDomains; preload';
         #listen [::]:80 default_server ipv6only=on;
 
@@ -53,8 +53,6 @@ server {
 
         server_name FQDN.com;
         ssl on;
-        #ssl_buffer_size 1400;
-        #ssl_session_tickets off;
         ssl_certificate /etc/letsencrypt/live/FQDN.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/FQDN.com/privkey.pem;
         
@@ -74,8 +72,8 @@ server {
         ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
         ssl_prefer_server_ciphers on;
         
-        # WE WANT TO GENERATE A 4096-BIT DHPARAM KEY IN THE DIRECTORY '/etc/nginx/ssl' WHICH YOU HAVE TO CREATE WITH 
-        # $ mkdir /etc/nginx/ssl
+        # WE WANT TO GENERATE A 4096-BIT DHPARAM KEY IN THE DIRECTORY '/etc/nginx/ssl' WHICH WE HAVE TO CREATE WITH 
+        # $ mkdir /etc/nginx/ssl && cd /etc/nginx/ssl
         # BY USING THE COMMAND
         # $ openssl dhparam -out dhparam.pem 4096
         
