Update and rename nginx.conf to nginx/nginx-ssl.conf

--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -26,9 +26,7 @@ server {
         
         # THIS WILL REDIRECT HTTP TO HTTPS
         return 301 https://FQDN.com$request_uri;
-        location ~ /.well-known {
-               allow all;
-        }
+        location ~ /.well-known { allow all; }
 }
 
 server {
@@ -82,20 +80,7 @@ server {
         ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
         # 2048-BIT CERTIFICATE
-        location /.well-known/acme-challenge {
-                root /var/www/letsencrypt;
-        }
-
-        location ~ /(config\.php|common\.php|cache|files|images/avatars/upload|includes|store) {
-                deny all;
-                return 403;
-        }
-        
-        # THIS IS FOR THE WOLTLAB BURNING BOARD CMS SOFTWARE 
-        location /wbb/ {
-                index index.php;
-                try_files $uri $uri/ /wbb/index.php?$uri&$args;
-        }
+        location /.well-known/acme-challenge { root /var/www/letsencrypt; }
 
         location = /robots.txt {
                 allow all;
@@ -103,30 +88,7 @@ server {
                 access_log off;
         }
         
-        location ~* \.(gif|jpe?g|png|css)$ {
-                expires   30d;
-        }
-
-        # NOTE: THIS IS THE LOCATION FOR PHP MY ADMIN SITE WHICH INCLUDES AN NGINX AUTH
-        location /PHPMYADMINLOCATION {
-                auth_basic "Admin Login";
-                auth_basic_user_file /etc/nginx/pma_pass;
-        }
-    
-        # THIS NEEDS TO BE AN OWN SERVER (FOR GOGS)
-        # EDIT: UNUSED, HAS ITS OWN SUBDOMAIN NOW
-        #location /git {
-        #       proxy_pass http://localhost:3000/;
-        #}
-
-        location ~ \.php$ {
-                try_files $uri =404;
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass unix:/var/run/php5-fpm.sock;
-                fastcgi_index index.php;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                include fastcgi_params;
-        }
+        location ~* \.(gif|jpe?g|png|css)$ { expires 30d; }
         
         # LETSENCRYPT
         location ~ /.well-known {
@@ -140,10 +102,5 @@ server {
                 internal;
         }
         
-        location / {
-                index index.php;
-                try_files $uri $uri/ /index.php?$uri&$args;
-                #rewrite ^(.*)$ https://$http_host$request_uri redirect;
-                # include /etc/nginx/naxsi.rules
-        }
+        location / { try_files $uri $uri/ =404; }
 }
