Update and rename no-ssl.nginx.conf to no_ssl-nginx.conf

--- a/nginx/no_ssl-nginx.conf
+++ b/nginx/no_ssl-nginx.conf
@@ -2,11 +2,11 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
-    root /var/www/nulldev.org/public_html;
+    root /var/www/FQDN.com/public_html;
     index index.php index.html index.htm;
-    error_log /var/www/nulldev.org/log/err.log;
+    error_log /var/www/FQDN.com/log/err.log;
 
-    server_name nulldev.org;
+    server_name FQDN.com;
 
     location / {
         try_files $uri $uri/ =404;
