--- a/nginx/no_ssl-nginx.conf
+++ b/nginx/no_ssl-nginx.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80 default_server;
     
     root /var/www/FQDN.com/public_html;
-    index index.php index.html index.htm;
+    index index.html index.htm;
     error_log /var/www/FQDN.com/log/err.log;
     
     server_name FQDN.com;
