--- a/nginx/ssl_compact-nginx.conf
+++ b/nginx/ssl_compact-nginx.conf
@@ -9,7 +9,7 @@
 server {
 	listen 80 default_server;
         listen [::]:80 default_server;
-        server_name FQDN.com;
+        server_name FQDN.com www.FQDN.com;
         return 301 https://FQDN.com$request_uri;
         location ~ /.well-known { allow all; }
         error_log /var/www/FQDN.com/log/err.log;
