--- a/nginx/ssl-nginx.conf
+++ b/nginx/ssl-nginx.conf
@@ -22,7 +22,7 @@
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name FQDN.com;
+        server_name FQDN.com www.FQDN.com;
         
         # THIS WILL REDIRECT HTTP TO HTTPS
         return 301 https://FQDN.com$request_uri;
